made it compatable as few lines of code needed to be changed for blockly-tradais mostly folder path has to be changed and had to diable in release task the publish login to google as its not required for our use-case

--- a/appengine/redirect.html
+++ b/appengine/redirect.html
@@ -5,8 +5,8 @@
 var loc = location.href;
 
 // Blockly files moved from /blockly to /static on 5 Dec 2012.
-if (loc.match('/blockly/')) {
-  loc = loc.replace('/blockly/', '/static/');
+if (loc.match('/blockly-tradais/')) {
+  loc = loc.replace('/blockly-tradais/', '/static/');
 }
 
 // Maze and Turtle moved from demos to apps on 29 Dec 2012.
